--- a/blog-project/blogapp/templates/BlogPage.html
+++ b/blog-project/blogapp/templates/BlogPage.html
@@ -2,29 +2,28 @@
 
 {% block content %}
 <style>
-    .navbar .container-fluid {
+    .navbar .container-fluid, #modal-body-comments, .paginat {
         overflow-x: auto;
-        white-space: nowrap;
         padding-bottom: 10px;
         scrollbar-width: thin;
         scrollbar-color: #888 #d9d9d9;
     }
 
-    .navbar .container-fluid::-webkit-scrollbar {
+    .navbar .container-fluid::-webkit-scrollbar, #modal-body-comments::-webkit-scrollbar {
         height: 8px;
     }
     
-    .navbar .container-fluid::-webkit-scrollbar-track {
+    .navbar .container-fluid::-webkit-scrollbar-track, #modal-body-comments::-webkit-scrollbar-track {
         background: #d9d9d9;
         border-radius: 10px;
     }
     
-    .navbar .container-fluid::-webkit-scrollbar-thumb {
+    .navbar .container-fluid::-webkit-scrollbar-thumb, #modal-body-comments::-webkit-scrollbar-thumb {
         background: #888;
         border-radius: 10px;
     }
     
-    .navbar .container-fluid::-webkit-scrollbar-thumb:hover {
+    .navbar .container-fluid::-webkit-scrollbar-thumb:hover, #modal-body-comments::-webkit-scrollbar-thumb:hover {
         background: #555;
     }
     @media (min-width: 600px) {
@@ -35,7 +34,7 @@
     }
     a {
         text-decoration: none;
-        cursor: pointer;
+        cursor: pointer; 
     }
     .b-l-c-me:hover {
         transform: scale(1.05);
@@ -43,14 +42,21 @@
 </style>
 <nav class="navbar" style="background-color: #d9d9d9;">
     <div class="container-fluid overflow-auto gap-3 d-flex flex-nowrap p-2">
-      
+
+      <a type="button" href="{% url 'blog' %}" class="btn btn-secondary" style="min-width: 160px;">All</a>
       {% for tag in tags %}
-      <button type="button" class="btn btn-secondary" style="min-width: 160px;">{{tag}}</button>
+      <a type="button" href="?tag={{tag.id}}" class="btn btn-secondary" style="min-width: 160px;">{{tag}}</a>
       {% endfor %}
         
     </div>
   </nav>
-<h1 class="text-center m-3">Blog</h1>
+<h1 class="text-center m-3">
+    {% if posts.tag_name %} 
+        {{posts.tag_name}}
+        {% else %}
+        All
+    {% endif %}
+</h1>
 
 <div class="container">
     
@@ -73,12 +79,19 @@
                 <span class="fs-6 px-3 py-2 badge bg-secondary">{{post.tag.name}}</span>
             </div>
         </div>
+        
+        {% if post.image %}
         <img src="/media/{{post.image}}" class="card-img-top" alt="...">
+        {% endif %}
         <div class="card-body">
             <h5 class="card-title">{{post.title}}</h5>
             <p class="card-text">{{post.content}}</p>
             <div class="mt-4 d-flex justify-content-between align-items-center">
-                <a><h5 class="b-l-c-me text-decoration-underline">{{ post.comments.count }} Comments</h5></a>
+
+                <a data-bs-toggle="modal" data-bs-target="#CommentsModel" onclick="getCommentForPost({{post.id}})">
+                    <h5 class="b-l-c-me text-decoration-underline">{{ post.comments.count }} Comments</h5>
+                </a>
+
                 <div class="b-l-c-me" onclick="toggleLikes({{post.id}})">
                 <a id="like-setted-{{post.id}}">
                     {{ post.likes_count }}
@@ -94,15 +107,87 @@
                 <p class="m-0 text-secondary" style="font-size: 14px;">{{post.created_at}}</p>
             </div>
         </div>
-      </div>
+    </div>
+    {% endfor %}
 
-      {% endfor %}
+    <!-- Modal -->
+    <div class="modal fade" id="CommentsModel" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title">Post Comments</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body overflow-auto" 
+                style="max-height: 75vh; padding: 40px" id="modal-body-comments">
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="paginat btn-group me-2 p-1 w-50 overflow-auto
+        border-top-0 border-bottom-0 border-primary border border-2
+        m-4 mb-5 float-end" role="group" aria-label="First group">
+        
+        {% for item in posts.paginator.page_range %}
+            
+            {% if item == posts.number %}
+
+                <a type="button" href="?page={{ item }}&&tag={{ posts.tag_id }}" class="btn btn-primary">{{item}}</a>
+                {% else %}
+                <a type="button" href="?page={{ item }}&&tag={{ posts.tag_id }}" class="btn btn-outline-primary">{{item}}</a>
+
+            {% endif %}
+
+        {% endfor %}
+            
+    </div>
 </div>
 
 <script>
+    function getCommentForPost(post_id){
+        fetch(`{% url 'getComment' %}?post_id=${post_id}`, {
+            method: "GET",
+        })
+        .then(response => response.json())
+        .then(response => {
+            console.log(response)
+            document.getElementById("modal-body-comments").innerHTML = ''
+            for(let item of response.comments) {
+                document.getElementById("modal-body-comments").innerHTML += `
+                    <div class="mb-5">
+                        <div class="me-2 d-flex gap-2 align-items-center">
+                            <img class="rounded-circle border border-primary" style="width: 50px; height: 50px"
+                                src=" {% if post.user.profile.profile_image.url %}
+                                {{post.user.profile.profile_image.url}}
+                                {% else %}
+                                https://www.blookup.com/static/images/single/profile-1.edaddfbacb02.png
+                                {% endif %}"
+                                alt="">
+                                
+                            <h4 class="d-inline">${item.user__username}</h4>
+                        </div>
+
+                        <p class="mt-2 ms-5"> ${item.content}
+                            <img class="mt-2 d-block" style="max-width: 75%"
+                            src="/media/${item.image}" alt="">
+                        </p>
+                    </div>
+                `
+            }
+        }).catch((error) => {
+            console.log(error)
+        })
+    }
+
     function getCSRFToken() {
         return document.querySelector('[name=csrfmiddlewaretoken]').value;
     }
+
     function toggleLikes(post_id) {
         let formData = new FormData();
         formData.append("post_id", post_id);
