--- a/blog-project/blogapp/templates/main.html
+++ b/blog-project/blogapp/templates/main.html
@@ -83,6 +83,10 @@
         <i class="bi bi-arrow-up fs-4"></i>
     </button>   
 
+    <footer class="text-white bg-dark d-flex justify-content-center align-items-center p-3">
+        &copy;Ziad Ahmed Shalaby 2025.
+    </footer>
+
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const scrollTopBtn = document.getElementById("scrollTopBtn");
