--- a/blog-project/blogapp/templates/BlogPage.html
+++ b/blog-project/blogapp/templates/BlogPage.html
@@ -219,7 +219,7 @@
     </div>
     <!--// Modal Create post //-->
 
-    {% comment %} tags {% endcomment %}
+    {% comment %} pagination {% endcomment %}
     <div class="d-flex justify-content-end">
         <div class="paginat btn-group me-2 p-1 w-50 overflow-auto
             border-top-0 border-bottom-0 border-primary border border-2
@@ -239,7 +239,7 @@
                 
         </div>
     </div>
-    {% comment %} tags {% endcomment %}
+    {% comment %} pagination {% endcomment %}
 </div>
 
 <script>
